==> ldavicoclases/sapi_stm32f4/sapi/src/sapi_uart.c <==
#include "sapi_uart.h"
#include "sapi_gpio.h"
#include "sapi_delay.h"
#include "string.h"
#include "sapi_circularBuffer.h"
#include "usbd_def.h"
#include "usbd_core.h"
#include "usbd_desc.h"
#include "usbd_cdc.h"
#include "usbd_cdc_if.h"

static void uartProcessIRQ( uartMap_t uart )
{
   /* UART in mode Receiver -------------------------------------------------*/
   if (__HAL_UART_GET_FLAG(uartMap[uart].uart, UART_FLAG_RXNE) == SET)
   {
     // Execute callback
     if( ( uartMap[uart].uart == &huart3 ) && (rxIsrCallbackUART3 != 0) )
        (*rxIsrCallbackUART3)();

     if( ( uartMap[uart].uart == &huart4 )  && (rxIsrCallbackUART4 != 0) )
        (*rxIsrCallbackUART4)();
     return;
   }

   /* UART in mode Transmitter end --------------------------------------------*/
   if (__HAL_UART_GET_FLAG(uartMap[uart].uart, UART_FLAG_TC) == SET)
   {
      // Execute callback
      if( ( uartMap[uart].uart == &huart3 ) && (txIsrCallbackUART3 != 0) )
         (*txIsrCallbackUART3)();

      if( ( uartMap[uart].uart == &huart4 )  && (txIsrCallbackUART4 != 0) )
         (*txIsrCallbackUART4)();
     return;
   }
}

void uartRxInterruptSet( uartMap_t uart, bool_t enable ){
   if( enable ){
      __HAL_UART_ENABLE_IT(uartMap[uart].uart, UART_IT_RXNE);

      HAL_NVIC_SetPriority(uartMap[uart].irq, 15, 15);
      NVIC_EnableIRQ( uartMap[uart].irq );
   } else{
      __HAL_UART_DISABLE_IT(uartMap[uart].uart, UART_IT_RXNE);

      NVIC_DisableIRQ( uartMap[uart].irq );
   }
}

void uartTxInterruptSet( uartMap_t uart, bool_t enable ){
   if( enable ){
      __HAL_UART_ENABLE_IT(uartMap[uart].uart, UART_IT_TC);

      HAL_NVIC_SetPriority(uartMap[uart].irq, 15, 15);
      HAL_NVIC_EnableIRQ(uartMap[uart].irq);               // Enable Interrupt
   } else{
      __HAL_UART_DISABLE_IT(uartMap[uart].uart, UART_IT_TC);

      NVIC_DisableIRQ( uartMap[uart].irq );
   }
}

void uartRxInterruptCallbackSet(
   uartMap_t uart,                  // UART
   callBackFuncPtr_t rxIsrCallback  // pointer to function
){
   if( rxIsrCallback != 0 ){
      // Set callback
      if( uart == UART_3 ) rxIsrCallbackUART3 = rxIsrCallback;
      if( uart == UART_4 ) rxIsrCallbackUART4 = rxIsrCallback;
   }
}

void uartTxInterruptCallbackSet(
   uartMap_t uart,                  // UART
   callBackFuncPtr_t txIsrCallback  // pointer to function
){
   if( txIsrCallback != 0 ){
      // Set callback
      if( uart == UART_3 ) txIsrCallbackUART3 = txIsrCallback;
      if( uart == UART_4  ) txIsrCallbackUART4 = txIsrCallback;
   }
}

void uartConfig( uartMap_t uart, uint32_t baudRate ){
   switch( uart ) {
   case UART_3:
      __HAL_RCC_USART3_CLK_ENABLE();

      gpioConfig(UART3_TX, GPIO_ALT_FUNCTION);
      gpioConfig(UART3_RX, GPIO_ALT_FUNCTION);

      huart3.Instance = USART3;
      huart3.Init.BaudRate = baudRate;
      huart3.Init.WordLength = UART_WORDLENGTH_8B;
      huart3.Init.StopBits = UART_STOPBITS_1;
      huart3.Init.Parity = UART_PARITY_NONE;
      huart3.Init.Mode = UART_MODE_TX_RX;
      huart3.Init.HwFlowCtl = UART_HWCONTROL_NONE;
      huart3.Init.OverSampling = UART_OVERSAMPLING_16;
      HAL_UART_Init(&huart3);
      break;
   case UART_4:
      __HAL_RCC_UART4_CLK_ENABLE();

      gpioConfig(UART4_TX, GPIO_ALT_FUNCTION);
      gpioConfig(UART4_RX, GPIO_ALT_FUNCTION);

      huart4.Instance = UART4;
      huart4.Init.BaudRate = baudRate;
      huart4.Init.WordLength = UART_WORDLENGTH_8B;
      huart4.Init.StopBits = UART_STOPBITS_1;
      huart4.Init.Parity = UART_PARITY_NONE;
      huart4.Init.Mode = UART_MODE_TX_RX;
      huart4.Init.HwFlowCtl = UART_HWCONTROL_NONE;
      huart4.Init.OverSampling = UART_OVERSAMPLING_16;
      HAL_UART_Init(&huart4);
      break;
   case UART_USB:
      circularBufferConfig(cdcBuffer, 1, 1000);

      gpioConfig(OTG_FS_PowerSwitchOn, GPIO_ALT_FUNCTION);
      gpioConfig(OTG_FS_OverCurrent  , GPIO_ALT_FUNCTION);

      gpioConfig(OTG_VBUS , GPIO_ALT_FUNCTION);
      gpioConfig(OTG_FS_ID, GPIO_ALT_FUNCTION);
      gpioConfig(OTG_FS_DM, GPIO_ALT_FUNCTION);
      gpioConfig(OTG_FS_DP, GPIO_ALT_FUNCTION);

      /* Peripheral clock enable */
      __HAL_RCC_USB_OTG_FS_CLK_ENABLE();

      /* Peripheral interrupt init */
      HAL_NVIC_SetPriority(OTG_FS_IRQn, 5, 0);
      HAL_NVIC_EnableIRQ(OTG_FS_IRQn);

      /* Init Device Library,Add Supported Class and Start the library*/
      USBD_Init(&hUsbDeviceFS, &FS_Desc, DEVICE_FS);

      USBD_RegisterClass(&hUsbDeviceFS, &USBD_CDC);

      USBD_CDC_RegisterInterface(&hUsbDeviceFS, &USBD_Interface_fops_FS);

      USBD_Start(&hUsbDeviceFS);
      break;
   }
}

bool_t uartReadByte( uartMap_t uart, uint8_t* receivedByte ){
   bool_t retVal = TRUE;

   if( uart == UART_USB ) {
      if( circularBufferRead( &cdcBuffer, receivedByte ) == CIRCULAR_BUFFER_EMPTY ) {
         retVal = FALSE;
      } else {
         retVal = TRUE;
      }
   } else {
      if( HAL_UART_Receive( uartMap[uart].uart, receivedByte, 1, 1) == HAL_OK ) {
         retVal = TRUE;
      } else {
         retVal = FALSE;
      }
   }

   return retVal;
}

void uartWriteByte( uartMap_t uart, uint8_t value ){
   delay_t timeoutDelay;

   delayConfig(&timeoutDelay, 10);

   if( uart == UART_USB ) {
      while( CDC_Transmit_FS(&value, 1) == USBD_BUSY && !delayRead(&timeoutDelay) );
   } else {
      HAL_UART_Transmit(uartMap[uart].uart, &value, 1, 1);
   }
}
