==> ciaa/firmware_v2/modules/lpc4337_m4/sapi/src/sapi_uart.c <==
#include "sapi_uart.h"
#include "string.h"
#include "sapi_circularBuffer.h"

static void uartProcessIRQ( uartMap_t uart )
{
   uint8_t status = Chip_UART_ReadLineStatus( lpcUarts[uart].uartAddr );

   // Rx Interrupt
   if(status & UART_LSR_RDR) // uartRxReady
   {
      // Execute callback      
      if( ( uart == UART_GPIO ) && (rxIsrCallbackUART0 != 0) )
         (*rxIsrCallbackUART0)(0);
      
      if( ( uart == UART_USB )  && (rxIsrCallbackUART2 != 0) )
         (*rxIsrCallbackUART2)(0);
      
      if( ( uart == UART_232 )  && (rxIsrCallbackUART3 != 0) )
         (*rxIsrCallbackUART3)(0);
   }
   
   // Tx Interrupt
   if( ( status & UART_LSR_THRE ) && // uartTxReady
       ( Chip_UART_GetIntsEnabled(LPC_USART3) & UART_IER_THREINT ) ){

      // Execute callback      
      if( ( uart == UART_GPIO ) && (txIsrCallbackUART0 != 0) )
         (*txIsrCallbackUART0)(0);
      
      if( ( uart == UART_USB )  && (txIsrCallbackUART2 != 0) )
         (*txIsrCallbackUART2)(0);
      
      if( ( uart == UART_232 )  && (txIsrCallbackUART3 != 0) )
         (*txIsrCallbackUART3)(0);
   }
}

void uartRxInterruptSet( uartMap_t uart, bool_t enable ){
   if( enable ){  
      // Enable UART Receiver Buffer Register Interrupt
      Chip_UART_IntEnable( lpcUarts[uart].uartAddr, UART_IER_RBRINT );
      // Enable UART line status interrupt. LPC43xx User manual page 1118
      //NVIC_SetPriority( lpcUarts[uart].uartIrqAddr, 6 );
      // Enable Interrupt for UART channel
      NVIC_EnableIRQ( lpcUarts[uart].uartIrqAddr );
   } else{
      // Disable UART Receiver Buffer Register Interrupt
      Chip_UART_IntDisable( lpcUarts[uart].uartAddr, UART_IER_RBRINT );
      // Disable Interrupt for UART channel
      NVIC_DisableIRQ( lpcUarts[uart].uartIrqAddr );
   }
}

void uartTxInterruptSet( uartMap_t uart, bool_t enable ){
   if( enable ){  
      // Enable THRE irq (TX)
      Chip_UART_IntEnable( lpcUarts[uart].uartAddr, UART_IER_THREINT );
      NVIC_EnableIRQ( lpcUarts[uart].uartIrqAddr );
   } else{
      // Disable THRE irq (TX)
      Chip_UART_IntDisable( lpcUarts[uart].uartAddr, UART_IER_THREINT );
      NVIC_DisableIRQ( lpcUarts[uart].uartIrqAddr );
   }
}

void uartRxInterruptCallbackSet( 
   uartMap_t uart,                  // UART
   callBackFuncPtr_t rxIsrCallback  // pointer to function
){
   if( rxIsrCallback != 0 ){
      // Set callback
      if( uart == UART_GPIO ) rxIsrCallbackUART0 = rxIsrCallback;
      if( uart == UART_485  ) rxIsrCallbackUART0 = rxIsrCallback;
      if( uart == UART_USB  ) rxIsrCallbackUART2 = rxIsrCallback;
      if( uart == UART_ENET ) rxIsrCallbackUART2 = rxIsrCallback;
      if( uart == UART_232  ) rxIsrCallbackUART3 = rxIsrCallback;      
   }
}

void uartTxInterruptCallbackSet( 
   uartMap_t uart,                  // UART
   callBackFuncPtr_t txIsrCallback  // pointer to function
){
   if( txIsrCallback != 0 ){
      // Set callback
      if( uart == UART_GPIO ) txIsrCallbackUART0 = txIsrCallback;
      if( uart == UART_485  ) txIsrCallbackUART0 = txIsrCallback;
      if( uart == UART_USB  ) txIsrCallbackUART2 = txIsrCallback;
      if( uart == UART_ENET ) txIsrCallbackUART2 = txIsrCallback;
      if( uart == UART_232  ) txIsrCallbackUART3 = txIsrCallback;      
   }
}

void uartConfig( uartMap_t uart, uint32_t baudRate ){
   // Initialize UART
   Chip_UART_Init( lpcUarts[uart].uartAddr );
   // Set Baud rate
   Chip_UART_SetBaud( lpcUarts[uart].uartAddr, baudRate );
   // Restart FIFOS using FCR (FIFO Control Register).
   // Set Enable, Reset content, set trigger level
   Chip_UART_SetupFIFOS( lpcUarts[uart].uartAddr, 
                         UART_FCR_FIFO_EN | 
                         UART_FCR_TX_RS   | 
                         UART_FCR_RX_RS   | 
                         UART_FCR_TRG_LEV0 );
   // Dummy read
   Chip_UART_ReadByte( lpcUarts[uart].uartAddr );
   // Enable UART Transmission
   Chip_UART_TXEnable( lpcUarts[uart].uartAddr );
   // Configure SCU UARTn_TXD pin
   Chip_SCU_PinMux( lpcUarts[uart].txPin.lpcScuPort, 
                    lpcUarts[uart].txPin.lpcScuPin, 
                    MD_PDN,
                    lpcUarts[uart].txPin.lpcScuFunc );
   // Configure SCU UARTn_RXD pin
   Chip_SCU_PinMux( lpcUarts[uart].rxPin.lpcScuPort, 
                    lpcUarts[uart].rxPin.lpcScuPin, 
                    MD_PLN | MD_EZI | MD_ZI,
                    lpcUarts[uart].rxPin.lpcScuFunc );
   
   // Specific configurations for RS485
   if( uart == UART_485 ){
      // Specific RS485 Flags
      Chip_UART_SetRS485Flags( LPC_USART0,
                               UART_RS485CTRL_DCTRL_EN | 
                               UART_RS485CTRL_OINV_1     );
      // UARTn_DIR extra pin for RS485
      Chip_SCU_PinMux( lpcUart485DirPin.lpcScuPort, 
                       lpcUart485DirPin.lpcScuPin, 
                       MD_PDN, 
                       lpcUart485DirPin.lpcScuFunc );
   }
}

bool_t uartReadByte( uartMap_t uart, uint8_t* receivedByte ){
   bool_t retVal = TRUE;
   if ( uartRxReady(uart) ){
      *receivedByte = uartRxRead(uart);
   } else{
      retVal = FALSE;
   }
   return retVal;
}

void uartWriteByte( uartMap_t uart, uint8_t value ){
   // Wait for space in FIFO (blocking)
   while( uartTxReady( uart ) == FALSE );
   // Send byte
   uartTxWrite( uart, value );
}
